--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-numpy
-opencv-contrib-python
-gym
-tensorflow
+gym==0.26.2
+numpy==1.21.5
+opencv_contrib_python
+opencv_python
+opencv_python_headless
+tensorflow==2.17.0
+tqdm
