--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-numpy==1.21.5
+numpy
 opencv_contrib_python
 opencv_python
 opencv_python_headless
 gym==0.26.2
 gym[box2d]
-tensorflow==2.17.0
+tensorflow
 tqdm
